hphp/test/zend/bad/ext/standard/tests/math/log_error.php
<?php
ini_set('precision', 14);

log();
log(36,4,true);
log(36, -4);
?>